Renamed to Bhutanio

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,7 +10,7 @@
          processIsolation="false"
          stopOnFailure="false">
     <testsuites>
-        <testsuite name="Rych Bencode Test Suite">
+        <testsuite name="Bhutanio Bencode Test Suite">
             <directory suffix="Test.php">tests/</directory>
         </testsuite>
     </testsuites>
