--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,12 @@
-/.gitattributes     export-ignore
-/.gitignore         export-ignore
-/.coveralls.yml     export-ignore
-/.travis.yml        export-ignore
-/nbproject          export-ignore
-/phpunit.xml.dist   export-ignore
-/tests              export-ignore
+/vendor
+/.idea
+/.vagrant
+composer.phar
+composer.lock
+Homestead.json
+Homestead.yaml
+.env
+*.map
+/.phpstorm.meta.php
+/_ide_helper.php
+/_ide_helper_models.php
