--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "rych/bencode",
+    "name": "bhutanio/bencode",
     "type": "library",
-    "description": "Bencode serializer for PHP 5.3+",
-    "keywords": ["bencode", "serialize"],
-    "homepage": "https://github.com/rchouinard/bencode",
+    "description": "Bencode serializer for Laravel",
+    "keywords": ["bencode", "serialize", "laravel"],
+    "homepage": "https://github.com/bhutanio/bencode",
     "license": "MIT",
     "authors": [
         {
@@ -13,14 +13,14 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=7.0.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.7"
+        "phpunit/phpunit": "6.*"
     },
     "autoload": {
         "psr-4": {
-            "Rych\\Bencode\\": "src/"
+            "Bhutanio\\Bencode\\": "src/"
         }
     }
 }
