--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         }
     ],
     "require": {
-        "php": ">=7.0.0"
+        "php": ">=7.0.0",
+        "illuminate/support": "5.*"
     },
     "require-dev": {
         "phpunit/phpunit": "6.*"
@@ -21,6 +22,13 @@
     "autoload": {
         "psr-4": {
             "Bhutanio\\Bencode\\": "src/"
+        }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Bhutanio\\Bencode\\BencodeServiceProvider"
+            ]
         }
     }
 }
