--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,10 @@
     ],
     "require": {
         "php": ">=7.0.0",
-        "illuminate/support": "5.*"
+        "illuminate/support": "5.*|6.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "6.*"
+        "phpunit/phpunit": "7.*|8.*"
     },
     "autoload": {
         "psr-4": {
