--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,10 @@
     ],
     "require": {
         "php": "^7.1",
-        "illuminate/support": "*.*"
+        "illuminate/support": "5.*|6.*|7.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "*.*"
+        "phpunit/phpunit": "7.*|8.*"
     },
     "autoload": {
         "psr-4": {
