--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,11 @@
         }
     ],
     "require": {
-        "php": "^7.1",
-        "illuminate/support": "5.*|6.*|7.*"
+        "php": ">=7.1",
+        "illuminate/support": ">=5.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "7.*|8.*"
+        "phpunit/phpunit": ">=7.0"
     },
     "autoload": {
         "psr-4": {
